# cop_gpt

./: .editorconfig  .flake8  .gitignore  Makefile  dev-environment.yml  ex.txt  gpt.py  pyproject.toml  settings.ini  setup.py
.github/: copilot-instructions.md
cop_gpt/: _modidx.py  mingpt.py
nbs/: bigram.ipynb  bob_dylan_lyrics.csv  deepseek_training.ipynb  derivatives.ipynb  gpt.ipynb  mcts.ipynb  minGRU.ipynb  mingpt.ipynb  tokenizer.ipynb  train_deep_seek_r1.ipynb  train_r1_light.ipynb
nbs/outputs/Qwen-1.5B-GRPO/runs/Feb01_15-10-46_MacBook-Pro-de-Jean.local/: events.out.tfevents.1738419048.MacBook-Pro-de-Jean.local.80186.0
nbs/outputs/Qwen-1.5B-GRPO/runs/Feb01_15-19-24_MacBook-Pro-de-Jean.local/: events.out.tfevents.1738419565.MacBook-Pro-de-Jean.local.92765.0
