[tool.poetry]
name = "cop_gpt"
version = "0.1.0"
description = "GPT analysis in cop"
authors = ["Jean Kunz <jkunz@pictet.com>"]
readme = "README.md"
packages = []


[tool.poetry.dependencies]
python = "^3.12"
pyarrow = "^18"
pandas = "^2"
matplotlib = "^3"
seaborn = "^0"
bokeh = "^3"
torch = "^2"
torchtext = "^0"
torchmetrics = "^1"
transformers = "^4"
rich = "^13"
icecream = "^2"
regex = "^2024.4.28"
ai-edge-model-explorer = "^0"
accelerate = "^0"
datasets = "^2"
evaluate = "^0"
trl = "^0.14.0"
peft = "^0.14.0"
latex2sympy2-extended = "^1.10.1"
math-verify = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.22.0"
nbdev = "^2"
flake8 = ">=6"
black = ">=23"
pytest = "^7.3"
ipytest = "^0.13"
ipympl = "^0.9.3"
pre-commit = "^3.3.3"
jupyter = "^1.0.0"
tensorboard = "^2"
jupytext = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
